<resources>
    <string name="app_name">Daily selfie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_apply">Apply</string>
    <string name="title_activity_full_size">FullSizeActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_set_alarm">Set Alarm</string>
    <string name="drawer_sort_by_date">Date</string>
    <string name="drawer_sort_by_last_modified">Modified</string>
    <string name="drawer_sort_by">Sort by</string>
    <string name="connection_error">Error connecting with server</string>
</resources>
