<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_order"
        android:checkableBehavior="single">
        <item
            android:checkable="false"
            android:title="@string/drawer_sort_by">
            <menu>
                <item
                    android:id="@+id/drawer_sort_by_date_asc"
                    android:checked="true"
                    android:icon="@drawable/ic_keyboard_arrow_up_white_24dp"
                    android:title="@string/drawer_sort_by_date" />
                <item
                    android:id="@+id/drawer_sort_by_date_desc"
                    android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
                    android:title="@string/drawer_sort_by_date" />
                <item
                    android:id="@+id/drawer_sort_by_last_modified_asc"
                    android:icon="@drawable/ic_keyboard_arrow_up_white_24dp"
                    android:title="@string/drawer_sort_by_last_modified" />
                <item
                    android:id="@+id/drawer_sort_by_last_modified_desc"
                    android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
                    android:title="@string/drawer_sort_by_last_modified" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/drawer_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_set_alarm_menu"
            android:icon="@drawable/ic_alarm_white_24dp"
            android:title="@string/drawer_set_alarm" />
        <item
            android:id="@+id/drawer_logout_menu"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/drawer_logout" />
    </group>
</menu>